Modals no longer have awkward scrollbar

--- a/Frontend/src/app/app.scss
+++ b/Frontend/src/app/app.scss
@@ -40,3 +40,7 @@ ion-thumbnail img {
 #loading-bar-spinner {
   display: none !important;
 }
+
+.alert-message {
+  overflow: auto;
+}
